# SwitchStr

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: DisableInSourceBuildDir.cmake  TestingOptions.cmake
include/SwitchStr/: Matcher.hpp  SwitchStr.hpp
src/: CMakeLists.txt  print-version.cpp
src/SwitchStr/: CMakeLists.txt
tests/: CMakeLists.txt
tests/SwitchStr/: CMakeLists.txt  MatcherMock.hpp  test_Matcher.cpp  test_SwitchStr.cpp
